created setting page and moved Plaid linking to setting page

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,13 @@ __pycache__/
 */__pycache__/*
 **/*.pyc
 
-
 # PyCharm / VSCode
 .idea/
 .vscode/
+
+# Ignore Python cache files
+__pycache__/
+*.pyc
+
+# Ignore macOS system files
+.DS_Store
